fixed the alignment in mobile view

--- a/css3/mobile_style_trim.css
+++ b/css3/mobile_style_trim.css
@@ -20,8 +20,8 @@ body {
         display: block;
         /*border: 1px solid #A1A1A1;*/
         /*background: #E5E5E5;*/
-        width: 414px;
-        height: 5084px;
+        width: 100%;
+        height: 100%;
         background-color: rgba(255, 248, 198, 1);
         overflow: inherit;
         opacity: 1;
@@ -30,8 +30,8 @@ body {
     #mobile_container {
         opacity: 1;
         position: absolute;
-        width: 945.664px;
-        height: 5084px;
+        width: 767px;
+        height: 100%;
         left: 50%;
         transform: translateX(-50%);
         top: 0px;
@@ -163,10 +163,8 @@ a:hover {
     #mobile_footer {
         opacity: 1;
         position: absolute;
-        width: 414px;
-        height: 526px;
-        left: 50%;
-        transform: translateX(-50%);
+        width: 100%;
+        height: 100%;
         top: 4558px;
         overflow: hidden;
     }
@@ -177,10 +175,11 @@ a:hover {
     .Rectangle_15_A1_Rectangle_98 {
         position: absolute;
         overflow: visible;
-        width: 414px;
-        height: 526px;
-        left: 0px;
+        width: 2000px;
+        height: 100%;
         top: 0px;
+        left: 50%;
+        transform: translateX(-50%);
     }
     /*#Group_10_A1_Group_49 {
         opacity: 1;
@@ -448,15 +447,15 @@ div#mobile_company_name {
     .Rectangle_480 {
         position: absolute;
         overflow: visible;
-        width: 414px;
-        height: 170px;
-        left: 260px;
+        width: 2000px;
+        height: 100%;
         top: 4350px;
+        left: 50%;
+        transform: translateX(-50%);
     }
     #GoogleMap_A1_Text_70 {
     opacity: 1;
     position: absolute;
-    left: 434px;
     top: 4430px;
     box-sizing: border-box;
     margin: 0;
@@ -470,15 +469,18 @@ div#mobile_company_name {
     font-weight: normal;
     font-size: 14px;
     color: rgba(59, 58, 58, 1);
+    left: 50%;
+    transform: translateX(-50%);
 }
     #mobile_question {
         opacity: 1;
         position: absolute;
         width: 414px;
-        height: 534.08px;
-        left: 266px;
+        height: 100%;
         top: 3733.064px;
         overflow: visible;
+        left: 50%;
+        transform: translateX(-50%);
     }
     #____________A1_Text_71 {
         opacity: 1;
@@ -1011,12 +1013,25 @@ div#mobile_company_name {
     #mobile_thumb {
         opacity: 1;
         position: absolute;
-        width: 511px;
-        height: 484px;
-        left: 211px;
+        width: 100%;
+        height: 100%;
         top: 3178px;
         overflow: visible;
+        left: 65%;
+        transform: translateX(-50%);
     }
+	
+	.mobile_footer_contents {
+    position: absolute;
+    overflow: visible;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 65%;
+    transform: translateX(-40%);
+}
+	
+	
     #Rectangle_479 {
         opacity: 1;
         fill: rgba(255, 255, 255, 1);
@@ -1024,10 +1039,11 @@ div#mobile_company_name {
     .Rectangle_479 {
         position: absolute;
         overflow: visible;
-        width: 511px;
-        height: 484px;
-        left: 0px;
+        width: 2000px;
+        height: 100%;
         top: 0px;
+        left: 50%;
+        transform: translateX(-50%);
     }
     #____________A1_Text_79 {
         opacity: 1;
@@ -2808,11 +2824,12 @@ div#mobile_company_name {
     #mobile_header {
         opacity: 1;
         position: absolute;
-        width: 414px;
-        height: 82px;
-        left: 266px;
+        width: 320px;
+        height: 100%;
         top: 0px;
         overflow: visible;
+        left: 50%;
+        transform: translateX(-50%);
     }
     #Rectangle_475 {
         opacity: 1;
@@ -2821,10 +2838,11 @@ div#mobile_company_name {
     .Rectangle_475 {
         position: absolute;
         overflow: visible;
-        width: 414px;
-        height: 82px;
-        left: 0px;
+        width: 330px;
+        height: 100%;
         top: 0px;
+        left: 50%;
+        transform: translateX(-50%);
     }
     #Group_295 {
         opacity: 1;
